microservices/k8s/kafka-ui.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  namespace: airline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
        - name: kafka-ui
          image: provectuslabs/kafka-ui:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "250m"

---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui-service
  namespace: airline
spec:
  selector:
    app: kafka-ui
  ports:
    - port: 8080
      targetPort: 8080
